<resources>
    <string name="app_name">CStore</string>
    <string name="home">Trang chủ</string>
    <string name="product">Sản phẩm</string>
    <string name="favorite">Yêu thích</string>
    <string name="setting">Cài đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brand_describe">Coolmate</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBhTaU972-vgJQrUsvnD1we-jcXdrDvezs</string>
    <string name="title_login_form">Chào mừng đến với Coolmate \n Đăng nhập</string>
    <string name="hint_username_login">Tên tài khoản</string>
    <string name="hint_password_login">Mật khẩu</string>
    <string name="content_des_chat">Đến tin nhắn</string>
    <string name="content_des_cart">Đến giỏ hàng</string>
    <string name="content_des_logo">Logo Coolmate</string>
    <string name="short_des_story"><b>Coolmate sinh ra để làm gì?</b>\n\nPhải chia sẻ thật là rất nhiều người đặt câu hỏi này cho đội ngũ Coolmate, nhưng gần đây…</string>
    <string name="more">Xem thêm</string>
    <string name="des">Image Description</string>
    <string name="title_story">Câu chuyện</string>
    <string name="title_cus_service">Dịch vụ khách hàng</string>
    <string name="title_staff">Nhân viên</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="search_hint">Bạn tìm gì hôm nay ?</string>
    <string name="po_size">"Size: "</string>
    <string name="po_color">"Màu: "</string>
    <string name="cart_fragment">"Giỏ hàng "</string>
    <string name="color_pick">Chọn màu</string>
    <string name="size_pick">Chọn size</string>
    <string name="stock">"Kho: "</string>
    <string name="default_po_number">1</string>
    <string name="order">Đặt hàng</string>
    <string name="total_pay">Thành tiền:</string>
    <string name="ship_supplier">Đơn vị vận chuyển</string>
    <string name="default_shipping">Chưa chọn</string>
    <string name="po_number">"Số lượng: "</string>
    <string name="confirm_delete">Xác nhận</string>
    <string name="confirm_delete_po_content">Bạn muốn xoá sản phẩm này khỏi giỏ hàng ?</string>
    <string name="yes_confirm">Xác nhận</string>
    <string name="no_confirm">Hoàn tác</string>
    <string name="deleted_po">"Đã xoá sản phẩm "</string>
    <string name="from_cart">khỏi giỏ hàng</string>
    <string name="undo">Hoàn tác</string>
    <string name="undo_notice">Hoàn tác thành công</string>
    <string name="no_po_in_cart">Chưa có sản phẩm nào trong giỏ hàng</string>
    <string name="signup_title">Đăng ký để mua sắm thỏa thích tại Cstore</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_password_again">Nhập lại mật khẩu</string>
    <string name="hint_address">Địa chỉ giao hàng</string>
    <string name="hint_email">Gmail</string>
    <string name="signup">Đăng ký</string>
    <string name="who_is_coolmate">Một Website bán đồ thời trang Online cho nam giới nhưng toàn bị chê chưa có tính thời trang trong thiết kế?\n\n

Một Startup ứng dụng công nghệ để thay đổi ngành thời trang truyền thống theo hướng D2C Online, mang lại sự tiện lợi và tiết kiệm hơn cho các đấng mày râu?\n\n

Một Thương Hiệu đồ thời trang cho nam giới hướng tới các sản phẩm tối giản, tập trung vào chất liệu và sự bền vững: Substainable Fashion?\n\n

Một Startup lên SharkTank gọi được 500k USD trong thời gian nhanh nhất, nhưng cũng có màn ‘kỳ kèo’ gay cấn nhất?\n\n

Một công ty đã vượt qua giai đoạn đại dịch Covid, và đạt tốc độ tăng trưởng 3.5 lần so với năm 2020?\n\n

Một doanh nghiệp bán hàng Online đầu tiên tại Việt Nam có chính sách kỳ quặc: cho phép khách hàng đổi trả sản phẩm tới 60 ngày kể cả đã qua sử dụng?\n\n

Một "Zappos" của Việt Nam khi đứng ra cam kết hài lòng 100% cho khách hàng mua sắm Online bằng 11 điều cụ thể?\n\n

Một Startup nguồn lực hạn chế đã có chương trình Care&amp;Share đóng góp cho hoạt động từ thiện ý nghĩa?\n\n

Một Startup mới 3 năm tuổi còn gặp nhiều khó khăn mà đi xây dựng Văn Hóa Doanh Nghiệp?\n\n</string>
    <string name="customer_service">01. Mang tới dịch vụ khách hàng trên cả mong đợi (Wow Service).\n\n
02. Tạo ra niềm vui và một chút kỳ lạ trong bán hàng và dịch vụ khách hàng.\n\n
03. Liều lĩnh, dám làm, sáng tạo và sẵn sàng tiếp thu ý kiến.\n\n
04. Đừng bao giờ nói rằng chúng ta không làm được khi chưa thực sự cố gắng hết sức.\n\n
05. Giao tiếp cởi mở, xây dựng mối quan hệ dựa trên sự chân thành.\n\n
06. Công bằng và minh bạch mọi thứ giúp chúng ta bớt các nỗi lo vớ vẩn.\n\n
07. Xây dựng một đội ngũ lạc quan và yêu thương nhau.
08. Khiêm nhường, làm nhiều hơn là nói.\n\n
09. Có đam mê và nhiệt huyết và sự can đảm.\n\n
10. Sẵn sàng học hỏi cái mới để phát triển bản thân.\n\n</string>
    <string name="staff">Tổng đài Coolmate với số Hotline 1900272737 rất dễ tìm kiếm và xuất hiện khắp mọi nơi từ Website, Email, Fanpage, trong nhãn mác, bao bì đóng gói\n\n

Hơn thế nữa, đội ngũ chăm sóc khách hàng Coolmate cam kết 100% cuộc gọi sẽ được trả lời, nếu như bị gọi nhỡ (do quá tải) sẽ được gọi lại ngay lập tức.\n\n

Ngoài ra khách hàng có thể liên hệ với Coolmate thông qua rất nhiều kênh khác nhau như: Email, Chat, Để lại đánh giá, bình luận ở các kênh mạng xã hội của Coolmate.\n\n

Coolmate không giới hạn thời gian phải kết thúc một cuộc gọi. Chúng tôi khuyến khích nhân viên CSKH nói chuyện và trao đổi với khách hàng nhiều hơn. Cuộc gọi dài nhất tới thời điểm hiện tại chúng tôi ghi nhận là kéo dài 48 phút.\n\n

Đội ngũ CSKH của chúng tôi cam kết rằng 99.99% các vấn đề của khách hàng khi gọi tới sẽ được giải quyết NHANH, ĐẦY ĐỦ, và ĐÁNG NHỚ. CSKH của Coolmate được trao nhiều công cụ, và quyền hành để giúp có thể hỗ trợ khách hàng ngay lập tức, với mục tiêu cuối cùng là mang lại trải nghiệm khách hàng hài lòng 100%.\n\n


SỰ TƯƠNG TÁC MANG\n
TÍNH CÁ NHÂN HOÁ\n
Khác với các tổng đài viên trả lời theo cấu trúc có sẵn. Khác với các Fanpage phản hồi tự động, và theo những form lặp lại.\n\n

Ở Coolmate, mọi thứ đều không có kịch bản trước. CSKH của chúng tôi được đào tạo để có thể xử lý theo từng trường hợp cụ thể theo yêu cầu của khách hàng. Coolmate tin rằng mỗi khách hàng có những vấn đề và nhu cầu khác nhau, do đó không thể áp dụng những công thức giống nhau được.\n\n

Trong bất cứ khi nào thuộc khung thời gian từ 8h30 tới 22:00 trong tất cả các ngày trong tuần, bạn đều có thể tâm sự với team CSKH Coolmate. Chúng tôi hướng tới một tổng đài hỗ trợ 24/7 trong tương lai.\n\n

Minh hoạ đơn giản cho dịch vụ này đó là bạn có thể mua 1 chiếc áo Coolmate và mặc nó trong vòng 59 ngày. Sau đó, nếu cảm thấy không hài lòng, bạn hoàn toàn có thể gửi yêu cầu đổi sang chiếc áo mới hoặc hoàn tiền. Mọi thứ sẽ được xử lý trong vòng 24 tiếng mà không hề có bất cứ khó khăn gì.\n\n

Tại sao chúng tôi làm như vậy?\n
Đơn giản vì chúng tôi muốn khách hàng hài lòng 100% khi mua đồ tại Coolmate.\n\n
Nếu khách hàng lợi dụng chính sách để trục lợi thì sao?\n
Chúng tôi tin rằng các khách hàng của mình đều tử tế, văn minh và có nhu cầu thực sự.\n\n

Việc mua 1 sản phẩm và cần đổi trả vì không vừa là một sự bất tiện. Không phải ai cũng có thể sắp xếp thời gian để mang ra bưu điện gửi lại và đợi 1 thời gian sau đó mới nhận lại món đồ mới.\n\n

Với Coolmate, mọi thứ đơn giản hơn rất nhiều. Bưu tá của chúng tôi sẽ mang sản phẩm mới và thu hồi sản phẩm cũ tại nhà hoặc cơ quan theo yêu cầu của khách hàng trong 1 lần duy nhất.\n\n

Có lẽ chỉ có Coolmate mới có thể xử lý trả hàng hoàn tiền trong vòng 24h. Vâng, nếu bạn không hài lòng thì chúng tôi sẽ hoàn tiền vào ví điện tử hoặc tài khoản của bạn trong vòng TỐI ĐA LÀ 24H kể từ khi gửi yêu cầu.\n\n

Ngoài ra, hàng cần gửi trả cũng sẽ có bưu tá của chúng tôi tới tận nơi để lấy, bạn không cần phải mang đi đâu cả.\n\n

Toàn bộ quá trình này là KHÔNG THU PHÍ.\n\n\n\n

Coolmate hiểu rằng khách hàng đặt hàng Online luôn kỳ vọng nhận hàng sớm nhất có thể, vì thế chúng tôi hợp tác với các đơn vị vận chuyển hàng đầu để đáp ứng yêu cầu này.\n\n

Đa số đơn hàng được giao tối đa 24h trong nội thành Hà Nội hoặc Hồ Chí Minh là bạn đã nhận được sản phẩm (trừ trường hợp đơn hàng dạng đặt trước hoặc chưa đủ tồn kho Coolmate sẽ gửi đi từ kho vận hành khác tỉnh thì thời gian sẽ là 2-3 ngày và với các tỉnh còn lại cũng chỉ mất 2-3 ngày là đơn hàng sẽ đến tay bạn\n\n

Mỗi đơn hàng của Coolmate được đóng gói 2 lớp, như một gói quà, đảm bảo khách hàng nhận được sản phẩm sẽ thực sự trọn vẹn.\n\n

Hiểu rằng đàn ông rất hay mất 1 chiếc vớ (mà không hiểu lý do vì sao), và như thế chiếc còn lại hầu như bị bỏ đi. Ở Coolmate, khách hàng sẽ nhận được 1 chiếc tất thay thế cho chiếc bị mất. Hãy gửi yêu cầu cho chúng tôi khi bạn gặp tình trạng tương tự, và tôi chắc chắn là sẽ gặp phải thôi.\n\n</string>
    <string name="empty_username_field">Nhập tên mà bạn muối chúng tôi gọi</string>
    <string name="empty_password_field">Nhập mật khẩu</string>
    <string name="empty_password_again_field">Hãy nhập lại mật khẩu lần nữa</string>
    <string name="wrong_password_again_field">Mật khẩu nhập lại không giống ban đầu</string>
    <string name="empty_phone_field">Hãy cho chúng tôi cách liên hệ với bạn</string>
    <string name="wrong_format_phone_field">Hãy nhập đúng kiểu số điện thoại</string>
    <string name="empty_address_field">Nhập địa chỉ để chúng mình giao hàng đén bạn</string>
    <string name="empty_email_field">Hãy nhập địa chỉ email để đăng nhập nào</string>
    <string name="wrong_format_email_field">Hãy nhập đúng email nhé</string>
    <string name="empty_size_color_field">Chọn size hoặc màu để thêm vào giỏ hàng</string>
    <string name="added_to_cart">Thêm sản phẩm vào giỏ hàng thành công</string>
    <string name="login_success">Chào mừng đến với thế giới của Coolmate</string>
    <string name="account_already">Đã có tài khoản ?</string>
    <string name="login">Đăng nhập</string>
    <string name="account_unavailable">Chưa có tài khoản ? </string>
    <string name="login_swap">Đăng nhập để mua sắm nào</string>
    <string name="tks"><b>THANK YOU!</b>\nTrong cuộc sống có quá nhiều sự lựa chọn, cảm ơn bạn đã chọn Coolmate!</string>
    <string name="not_login">Vui lòng đăng ký tài khoản để đặt hàng</string>
</resources>