<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/po_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/space"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/po_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:maxLines="2"
        style="@style/TitleCart"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/po_image"
        app:layout_constraintStart_toEndOf="@id/po_image"/>

    <TextView
        android:id="@+id/po_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SubText"
        android:textColor="@color/red_800"
        android:text="@string/po_size"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/po_name"
        app:layout_constraintTop_toBottomOf="@id/po_name"/>

    <TextView
        android:id="@+id/po_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/po_color"
        android:textColor="@color/green_700"
        style="@style/SubText"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/po_name"
        app:layout_constraintTop_toBottomOf="@id/po_name"/>

    <TextView
        android:id="@+id/po_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/cyan_600"
        style="@style/BaseText"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/po_number"
        app:layout_constraintTop_toTopOf="@id/po_number"
        app:layout_constraintBottom_toBottomOf="@id/po_number"
        app:layout_constraintStart_toEndOf="@id/po_image"/>

    <TextView
        android:id="@+id/po_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/po_number"
        android:textColor="@color/brown_600"
        android:layout_marginTop="@dimen/space_large"
        app:layout_constraintEnd_toEndOf="@id/po_name"
        app:layout_constraintTop_toBottomOf="@id/po_color"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="po_image, po_price, po_number" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/item_div"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/space"
        app:layout_constraintTop_toBottomOf="@id/barrier"/>
</androidx.constraintlayout.widget.ConstraintLayout>