<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/ic_back"

            android:elevation="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:elevation="1dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/content_des_logo"
            android:src="@drawable/ic_cart"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageProductSlider"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent"
            app:sliderAnimationDuration="600"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="1dp"
            app:sliderIndicatorSelectedColor="@color/white"
            app:sliderIndicatorUnselectedColor="@color/light_black"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/productInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imageProductSlider"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_margin="16dp"
                android:maxLines="1"/>
            <TextView
                android:id="@+id/productPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/productName"
                app:layout_constraintStart_toStartOf="@id/productName"
                android:layout_marginTop="8dp"
                android:text="179.000đ"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/productColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/productPrice"
                app:layout_constraintStart_toStartOf="@id/productName"
                android:layout_marginTop="8dp"
                android:text="Màu sắc:"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/colorPick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"

                app:layout_constraintTop_toBottomOf="@id/productColor"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                android:orientation="horizontal"
                android:padding="@dimen/space"
                android:scrollbars="none"/>

            <TextView
                android:id="@+id/productSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/colorPick"
                app:layout_constraintStart_toStartOf="@id/productName"
                android:layout_marginTop="8dp"
                android:text="Size:"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sizePick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                android:orientation="horizontal"
                android:padding="@dimen/space"
                app:layout_constraintTop_toBottomOf="@id/productSize" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cart_add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_large"
            android:layout_marginBottom="@dimen/space_large"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@color/bluer"
            android:layout_marginTop="@dimen/space_large"
            app:layout_constraintTop_toBottomOf="@id/productInfo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>